# doubletap

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
docs/: experts.md  gameplay-blindspots.md  goldfish-sim-design.md  operating-manual.md  rl-strategy-research.md  ui-redesign-TODO.md
src/doubletap/: analysis.py  archidekt.py  cli.py  db.py  decks.py  formats.py  manabase.py  names.py  ocr.py  scryfall.py  swaps.py  web.py
src/doubletap/ml/: data.py  eval.py  goldfish.py  infer_np.py  model.py  neighbors.py  policy.py  reward.py  train_bc.py  train_cql.py
src/doubletap/static/: index.html
tests/: conftest.py  test_analysis.py  test_archidekt.py  test_cli.py  test_db.py  test_decks.py  test_formats.py  test_goldfish.py  test_manabase.py  test_ml_data.py  test_ml_model.py  test_names.py  test_neighbors.py  test_reward.py  test_scryfall.py  test_web.py
tests/fixtures/: archidekt.csv  decklist.txt  moxfield.csv  oracle-cards.jsonl
