[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubletap"
version = "0.1.0"
description = "MTG deck-building app with offline-RL card recommendations"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "rapidfuzz",
    "typer",
    "numpy",
]

[project.optional-dependencies]
ocr = ["pyobjc-framework-Vision; sys_platform == 'darwin'"]
# Intel macs: last torch wheel is 2.2.2 (cp311) and needs numpy<2 —
# create the venv with python3.11 and `pip install "torch==2.2.2" "numpy<2"`
ml = ["torch>=2.2"]
dev = ["pytest", "respx", "ruff"]

[project.scripts]
doubletap = "doubletap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/doubletap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not macos_ocr'"
markers = [
    "macos_ocr: manual smoke tests that call the real Apple Vision framework",
]
