[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubletap"
version = "0.1.0"
description = "MTG deck-building app with offline-RL card recommendations"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "rapidfuzz",
    "typer",
    "numpy",
]

[project.optional-dependencies]
ocr = ["pyobjc-framework-Vision; sys_platform == 'darwin'"]
# Intel macs: the last x86_64 torch wheel is 2.2.2 (Python 3.11 only, needs
# numpy<2) — encoded as markers, with .python-version pinning the venv to 3.11.
# torch is only needed for TRAINING; recommend/complete run on numpy weights.
ml = [
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
dev = ["pytest", "respx", "ruff"]

[project.scripts]
doubletap = "doubletap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/doubletap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not macos_ocr'"
markers = [
    "macos_ocr: manual smoke tests that call the real Apple Vision framework",
]
