[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doubletap"
version = "0.1.8"
description = "Magic: The Gathering (MTG) deck-building assistant — photo import, Commander rules validation, deck analytics, and ML card recommendations"
readme = "README.md"
license = "MIT"
authors = [{ name = "Joshua Magaña", email = "joshua.magana@gmail.com" }]
keywords = ["mtg", "magic-the-gathering", "deck-building", "commander", "edh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "rapidfuzz",
    "typer",
    "numpy",
]

[project.optional-dependencies]
ocr = ["pyobjc-framework-Vision; sys_platform == 'darwin'"]
# Intel macs: the last x86_64 torch wheel is 2.2.2 (Python 3.11 only, needs
# numpy<2) — encoded as markers, with .python-version pinning the venv to 3.11.
# torch is only needed for TRAINING; recommend/complete run on numpy weights.
ml = [
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
dev = ["pytest", "respx", "ruff"]

[project.urls]
Repository = "https://github.com/jmagana2000/doubletap"
Documentation = "https://github.com/jmagana2000/doubletap/blob/main/docs/operating-manual.md"

[project.scripts]
doubletap = "doubletap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/doubletap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not macos_ocr'"
markers = [
    "macos_ocr: manual smoke tests that call the real Apple Vision framework",
]
